--- a/package.json
+++ b/package.json
@@ -7,15 +7,12 @@
     "dev": "npm exec vite",
     "build": "npm exec vite build",
     "preview": "npm exec vite preview",
-    "lint": "eslint .",
-    "bundle:exe": "pkg server.cjs --target node18-win-x64 --output release/domain-graph.exe",
-    "build:exe": "npm run build && npm run bundle:exe"
+    "lint": "eslint ."
   },
   "dependencies": {
     "@consta/charts": "1.0.0",
     "@consta/icons": "1.3.0",
     "@consta/uikit": "5.25.1",
-    "express": "4.21.1",
     "clsx": "2.1.1",
     "d3-scale": "4.0.2",
     "lodash": "4.17.21",
@@ -36,14 +33,8 @@
     "eslint-plugin-react": "7.37.2",
     "eslint-plugin-react-hooks": "5.0.0",
     "globals": "^16.4.0",
-    "pkg": "5.8.1",
     "typescript": "5.6.3",
     "vite": "5.4.10"
-  },
-  "pkg": {
-    "assets": [
-      "dist/**/*"
-    ]
   },
   "overrides": {
     "three-bmfont-text": "https://github.com/dmarcos/three-bmfont-text/archive/eed4878795be9b3e38cf6aec6b903f56acd1f695.tar.gz"
