--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "npm exec vite",
+    "server": "npm exec tsx server/index.ts",
     "build": "npm exec vite build",
     "preview": "npm exec vite preview",
     "lint": "eslint ."
@@ -14,15 +15,20 @@
     "@consta/icons": "1.3.0",
     "@consta/uikit": "5.25.1",
     "clsx": "2.1.1",
+    "cors": "2.8.5",
     "d3-scale": "4.0.2",
+    "express": "4.21.1",
     "lodash": "4.17.21",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-force-graph": "1.44.2",
-    "react-force-graph-2d": "^1.29.0"
+    "react-force-graph-2d": "^1.29.0",
+    "better-sqlite3": "9.6.0"
   },
   "devDependencies": {
     "@eslint/js": "9.15.0",
+    "@types/cors": "2.8.17",
+    "@types/express": "4.17.21",
     "@types/lodash": "4.17.12",
     "@types/react": "18.3.5",
     "@types/react-dom": "18.3.0",
@@ -33,6 +39,7 @@
     "eslint-plugin-react": "7.37.2",
     "eslint-plugin-react-hooks": "5.0.0",
     "globals": "^16.4.0",
+    "tsx": "4.19.1",
     "typescript": "5.6.3",
     "vite": "5.4.10"
   },
