--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "react-dom": "18.3.1",
     "react-force-graph": "1.44.2",
     "react-force-graph-2d": "^1.29.0",
-    "better-sqlite3": "9.6.0"
+    "sql.js": "1.11.0"
   },
   "devDependencies": {
     "@eslint/js": "9.15.0",
