--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "npm exec vite",
     "server": "npm exec tsx server/index.ts",
+    "dev:full": "npm exec concurrently \"npm run server\" \"npm run dev\"",
     "test:server": "npm exec tsx --test server/graphStore.test.ts",
     "build": "npm exec vite build",
     "preview": "npm exec vite preview",
@@ -36,6 +37,7 @@
     "@typescript-eslint/eslint-plugin": "^8.45.0",
     "@typescript-eslint/parser": "^8.45.0",
     "@vitejs/plugin-react": "4.3.4",
+    "concurrently": "9.0.1",
     "eslint": "9.15.0",
     "eslint-plugin-react": "7.37.2",
     "eslint-plugin-react-hooks": "5.0.0",
